| Bug #20341 | stored function inserting into one auto_increment puts bad data in slave | ||
|---|---|---|---|
| Submitted: | 8 Jun 2006 15:31 | Modified: | 29 Sep 2006 4:40 |
| Reporter: | Guilhem Bichot | ||
| Status: | Closed | ||
| Category: | Server: Replication | Severity: | S2 (Serious) |
| Version: | 5.0-bk | OS: | Linux (linux) |
| Assigned to: | Guilhem Bichot | Target Version: | |
| Tags: | bfsm_2007_05_03 | ||
[8 Jun 2006 15:31]
Guilhem Bichot
[23 Jun 2006 6:12]
Chris DiMartino
We are experiencing the same issue in 5.0.21-pro-gpl-log. This is a severity S2 for us, as it breaks our redundancy setup by breaking the replication to the slaves! Any ideas on a date for a fix?
[26 Jun 2006 22:56]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/8265
[29 Jun 2006 14:54]
Guilhem Bichot
there is another bug in the master
[11 Jul 2006 11:08]
Guilhem Bichot
scenario for the bug was: when a statement used a stored function which inserted into an auto_increment column, the used auto_increment value was not written into the binary log, so a different value could in some cases be inserted on the slave.
[21 Aug 2006 6:07]
Lars Thalmann
Fix pushed into 5.1.12. Please document this as a limitation for 5.0.
[29 Sep 2006 4:40]
Paul DuBois
Noted in 5.1.12 changelog, and documented as a limitation in the 5.0 manual.
